Add container to iframe

--- a/index.html
+++ b/index.html
@@ -130,16 +130,13 @@
                 </p>
                 <a href="#contact-form">Contact Us</a>
             </div>
-            <div class="left-video">
-                <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/vNyJuQuuMC8?si=8X9Nzy0v3HJQHPx5"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen>
-                </iframe>
+            <div class="wrap">
+              <div class="left-video">
+                  <iframe src="https://www.youtube.com/embed/vNyJuQuuMC8?si=8X9Nzy0v3HJQHPx5" title="YouTube video player" frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  allowfullscreen class="video">
+                  </iframe>
+              </div>
             </div>
         </div>
 
