Add smooth scroll to html

--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
           <p>
             One of the beautiful aspects of yoga is its inclusivity. It can be
             adapted to suit people of all ages and fitness levels. Whether
-            you're a beginner or an advanced practitioner, there's a style that
-            can work for you.
+            you're a beginner or an advanced practitioner.
           </p>
         </div>
       </div>
